# fastAPI-User-Example

./: README.md  main.py  pyproject.toml  requirements.txt
app/: app.py
app/configs/: __init__.py  authentication_configs.py  baes_configs.py  db.py
app/models/: User.py
app/repositories/: user_repository.py
app/routers/: user_router.py
app/schemas/: user_schema.py
app/services/: user_service.py
app_legacy/: app.py  customized.py  db.py  schemas.py  users.py
