[tool.poetry]
name = "fastapi-user"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
asyncpg = "^0.28.0"
sqlmodel = "^0.0.8"
sqlalchemy = "^1.4.41"
uvicorn = "^0.23.2"
jose = "^1.0.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
